Fixed footer covering .supporting

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,6 +8,7 @@ header {
    position: fixed;
    width: 100%;
    z-index: 5;
+   text-align: center;
 }
 
 nav {
@@ -44,11 +45,10 @@ main h1 {
 footer {
     background-color: #333;
     color: #fff;
-    padding: 30px 0;
+    padding: 0 0;
     position: fixed;
-    z-index: 5;
-    width: 100%;
     bottom: 0;
+    width: 100%;
 }
 
 footer p {
@@ -60,7 +60,7 @@ footer p {
 .container {
     max-width: 940px;
     margin: 0 auto;
-    padding: 0 10px;
+    padding: 20px 10px;
     text-align: center;
 }
 
@@ -99,8 +99,6 @@ footer p {
 .supporting {
     padding-top: 80px;
     padding-bottom: 100px;
-    position: relative;
-    bottom: 80px;
 }
 
 .supporting .col {
